# portfolia_backend

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  Dockerfile  pyproject.toml  requirements.txt
api/src/: main.py
api/src/core/: config.py  models.py  prompts.py
api/src/routes/: auth.py
api/src/services/: agent.py  rag_store.py  tavily_search.py
api/src/utils/: check_admin.py  validations.py
